--- a/src/Wrapper/Other Stuff/Otherstuff.css
+++ b/src/Wrapper/Other Stuff/Otherstuff.css
@@ -11,7 +11,7 @@
   height: 16.7vw;
   background-color: #0072ff;
   margin: 3px;
-  margin-left: px;
+ 
 }
 
 @media screen and (max-width:550px) {
